@@ -1,3 +1,8 @@
+2005-11-26  Richard Henderson  <rth@redhat.com>
+
+	* sysdeps/alpha/strncmp.S: Don't read too much data when pointers
+	are co-aligned, and count is aligned with the end of the word.
+
 2005-11-26  Ulrich Drepper  <drepper@redhat.com>
 
 	* nis/nis_lookup.c (nis_lookup): Mark RPCTIMEOUT as const.  Pretty
